Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -29,17 +29,27 @@
         <h3>
 <a id="hi" class="anchor" href="#hi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hi.</h3>
 
-<p>I'm a Peruvian developer interested in programming, Linux, Hacking and AI. I tackle on challenging problems and try to solve them with code. If you want to know more about me here is my cv.</p>
+<p>I'm a Peruvian developer interested in programming, Linux, Hacking and AI. I tackle on challenging problems and try to solve them with code. If you want to know more about me <a href="http://jnreynoso.github.io/CV.pdf">here</a> is my cv. Also you can stop and say hello at <a href="mailto:jeanalessi.reynoso@yahoo.com">jeanalessi.reynoso@yahoo.com</a>.</p>
 
 <h3>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h3>
 
-<p>My name is Jean Alesi Reynoso, I have 20 years and live in Lima, I'm a programmer who has over 4 years of experience in software development. I am currently working at Wunderman phantasia as a gardener(it's a joke!, work like Full stack developer).</p>
+<p>My name is Jean Reynoso, I have 20 years and live in Lima, I'm a programmer who has over 3 years of experience in software development. I started when I was very young to develop apps in Visual FoxPro, expanding my knowledge to all the other web system and achieving eventually more elaborated structures. I am currently working at <a href="http://www.wundermanphantasia.pe/">Wunderman Phantasia</a> as a Full stack developer.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ul>
+<li>Javascript</li>
+<li>Python</li>
+<li>CSharp</li>
+<li>Visual Basic</li>
+<li>Java</li>
+<li>C/C++</li>
+<li>HTML-CSS</li>
+<li>SQL</li>
+<li>PHP</li>
+</ul>
       </section>
     </div>
 
