[add] picture of me

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="container">
         <h1>Jnreynoso.GitHub.io</h1>
         <h2>This is my blog</h2>
+        <img src="images/i.jpg" alt="Yo" height="165" width="162">
 
         <section id="downloads">
           <a href="https://github.com/jnreynoso" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
