--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <!--<link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">-->
 
-    <title>Jnreynoso.GitHub.io by jnreynoso</title>
+    <title><Jean></title>
   </head>
 
   <body>
