--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <!--<link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">-->
+    <link rel="icon" type="image/png" href="images/favicon.png">
 
     <title><Jean></title>
   </head>
