--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <!--<link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">-->
     <link rel="icon" type="image/png" href="images/favicon.png">
-
+    <!-- Title -->
     <title><Jean></title>
-  </head>
+    <!-- Get jQuery -->
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="javascripts/typed.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/bluebird/latest/bluebird.min.js"></script>
+    <script src="javascripts/main.js" type="text/javascript"></script>
 
+  </head>
   <body>
 
     <header>
@@ -27,34 +32,40 @@
     </header>
 
     <div class="container">
+
       <section id="main_content">
-        <h3>
-<a id="hi" class="anchor" href="#hi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hi.</h3>
+        <h3><a id="hi" class="anchor" href="#hi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+          <span id="hi-title-typed"></span></h3>
 
-<p>I'm a Peruvian developer interested in programming, Linux, Hacking and AI. I tackle on challenging problems and try to solve them with code. If you want to know more about me <a href="http://jnreynoso.github.io/CV.pdf">here</a> is my cv. Also you can stop and say hello at <a href="mailto:jeanalessi.reynoso@yahoo.com">jeanalessi.reynoso@yahoo.com</a>.</p>
+        <p>
+          <span id="hi-content-typed"></span>
+        </p>
 
-<h3>
-<a id="about" class="anchor" href="#about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h3>
+        <h3><a id="about" class="anchor" href="#about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+          <span id="about-title-typed"></span></h3>
 
-<p>My name is Jean Reynoso, I have 20 years and live in Lima, I'm a programmer who has over 3 years of experience in software development. I started when I was very young to develop apps in Visual FoxPro, expanding my knowledge to all the other web system and achieving eventually more elaborated structures. I am currently working at <a href="http://www.wundermanphantasia.pe/">Wunderman Phantasia</a> as a Full stack developer.</p>
+        <p>
+          <span id="about-content-typed"></span>
+        </p>
 
-<h3>
-<a id="skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills</h3>
+        <h3><a id="skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+          <span id="skills-title-typed">Skills</span></h3>
 
-<ul>
-<li>Javascript</li>
-<li>Python</li>
-<li>CSharp</li>
-<li>Visual Basic</li>
-<li>Java</li>
-<li>C/C++</li>
-<li>HTML-CSS</li>
-<li>SQL</li>
-<li>PHP</li>
-</ul>
+        <ul>
+          <li><span id="js-typed">Javascript</span></li>
+          <li><span id="py-typed">Python</span></li>
+          <li><span id="csharp-typed">CSharp</span></li>
+          <li><span id="vb-typed">Visual Basic</span></li>
+          <li><span id="java-typed">Java</span></li>
+          <li><span id="c-typed">C/C++</span></li>
+          <li><span id="html-typed">HTML-CSS</span></li>
+          <li><span id="sql-typed">SQL</span></li>
+          <li><span id="php=typed">PHP</span></li>
+        </ul>
+
       </section>
+
     </div>
 
-    
   </body>
 </html>
