[add] effect machine writing

--- a/index.html
+++ b/index.html
@@ -49,20 +49,14 @@
         </p>
 
         <h3><a id="skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-          <span id="skills-title-typed">Skills</span></h3>
+          <span id="skills-title-typed"></span></h3>
 
-        <ul>
-          <li><span id="js-typed">Javascript</span></li>
-          <li><span id="py-typed">Python</span></li>
-          <li><span id="csharp-typed">CSharp</span></li>
-          <li><span id="vb-typed">Visual Basic</span></li>
-          <li><span id="java-typed">Java</span></li>
-          <li><span id="c-typed">C/C++</span></li>
-          <li><span id="html-typed">HTML-CSS</span></li>
-          <li><span id="sql-typed">SQL</span></li>
-          <li><span id="php=typed">PHP</span></li>
-        </ul>
+        <span id="skills-content-typed">  
+        </span>
 
+        <h3><a class="anchor" href="#hi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+          <span id="bye-typed"></span></h3>
+        
       </section>
 
     </div>
