[update] hide scroll bar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
     <script src="https://cdn.jsdelivr.net/bluebird/latest/bluebird.min.js"></script>
     <script src="javascripts/main.js" type="text/javascript"></script>
 
+    <style type="text/css">
+
+    /* Hide Scrollbar */
+    html {
+      overflow: scroll;
+      overflow-x: hidden;
+    }
+    ::-webkit-scrollbar {
+      width: 0px;  /* remove scrollbar space */
+      background: transparent;  /* optional: just make scrollbar invisible */
+    }
+    /* optional: show position indicator in red */
+    ::-webkit-scrollbar-thumb {
+      background: #FF0000;
+    }
+    
+    </style>
+
   </head>
   <body>
 
