[update] main content

--- a/others.html
+++ b/others.html
@@ -9,6 +9,44 @@
 	<link type="text/css" rel="stylesheet" href="stylesheets/shCoreRDark.css"/>
 	<script type="text/javascript">SyntaxHighlighter.all();</script>
   <meta charset="utf-8" />
+  <style>
+   input {
+     display: block;
+     margin-bottom: 20px;
+     box-shadow: 2px 2px 2px #888888;
+     width: 250px;
+   }
+
+   input:last-child {
+     margin-bottom: 5px;
+   }
+
+   .content {
+     width: 98%;
+     margin: 0;
+     padding: 0;
+     padding: 10px;
+     background: #151515 url("../images/bkg.png")
+   }
+
+   .main {
+     margin-top: 100px;
+     background-color: rgba(0, 0, 0, 0.04);
+     padding: 0;
+     margin: 0;
+     padding: 30px;
+     width: 51%;
+     border-radius: 25px;
+   }
+
+   button {
+     padding: 5px;
+     border-radius: 5px;
+     width: 100px;
+     background-color: #4078c0;
+     box-shadow: 2px 2px 2px #888888;
+   }
+  </style>
   <script>
    window.onload = function() {
 
