--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <header>
       <div class="container">
         <h1>Jnreynoso.GitHub.io</h1>
-        <h2>This is my blog</h2>
+        <h2>Welcome!</h2>
         <img src="images/i.jpg" alt="Yo" height="165" width="162">
 
         <section id="downloads">
